# open-bank

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md
blockchain_ethereum/: README.md  Read_me.md
blockchain_ethereum/solidity/V1/contracts/core/: Bank.sol
blockchain_ethereum/solidity/V2/contracts/core/: OpenBank.sol  OpenBankAccount.sol  OpenBankPersonal.sol  OpenBankPersonalAccount.sol
blockchain_ethereum/solidity/V2/contracts/interfaces/: IOpenBank.sol  IOpenBankAccount.sol  IOpenBankAccountRequestDebit.sol  IOpenBankPersonal.sol  IOpenBankSafety.sol
blockchain_ethereum/solidity/contracts/interface/: IBank.sol
blockchain_near/: ADMIN.md  BUILDER.md  README.md
blockchain_near/rust/obei_ob_near_core/: .project  Cargo.toml
blockchain_near/rust/obei_ob_near_core/src/: io.rs  lib.rs  reporting.rs
blockchain_near/rust/obei_ob_near_core/src/ob_io/: mod.rs
blockchain_near/rust/obei_ob_near_core/src/ob_traits/: mod.rs
blockchain_near/rust/obei_ob_near_core/src/tests/: mod.rs
blockchain_near/rust/open-block-ei-open-bank-near-core/: Cargo.toml
blockchain_near/rust/open-block-ei-open-bank-near-core/src/: lib.rs
blockchain_near/rust/open-block-ei-open-bank-near-core/src/ob_io/: mod.rs
blockchain_near/rust/open-block-ei-open-bank-near-core/src/tests/: mod.rs
business/: README.md
solidity/contracts/core/: Bank.sol
solidity/contracts/interface/: IBank.sol  IBankERC20.sol
