[package]
name = "open-block-ei-open-bank-near-core"
version = "0.1.0"
authors = ["Block Star Logic"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "3.1.0"
chrono = "0.4.19"
serde = "1.0.57"
open-block-ei-open-roles-near-core = "0.1.0"
num = "0.4.0"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true
